# lambdapi

./: CHANGES.md
lib/example/: dune
lib/example/nat/: dune
src/cli/: config.ml  dune  init_cmd.ml  install_cmd.ml  lambdapi.ml
src/competitor_format/: dune  hrs.ml  xtc.ml
src/core/: basics.ml  builtin.ml  commands.ml  compile.ml  ctxt.ml  debug_console.ml  dkParser.mly  dune  duner  env.ml  eval.ml  external.ml  files.ml  handle.ml  inductive.ml  infer.ml  legacy_lexer.mll  legacy_parser.ml  libMeta.ml  lpParser.mly  lplisp.ml  menhir_parser.mly  p_term.ml  package.ml  parser.ml  pos.ml  pretty.ml  print.ml  proof.ml  queries.ml  refiner.ml  rewrite.ml  scope.ml  sig_state.ml  sign.ml  sr.ml  syntax.ml  tactics.ml  term.ml  term.mli  (+5 more)
src/core/competitor_format/: dune  xtc.ml
src/core/file_management/: dune  error.ml
src/core/proof_mode/: builtin.ml  dune  proof.ml  queries.ml  rewrite.ml  scope.ml  tactics.ml  why3_tactic.ml
src/core/scoping/: basics.ml  sig_state.ml  sign.ml  terms.ml  tree.ml  tree_types.ml
src/core/type_checking/: eval.ml  sr.ml
src/file_management/: dune  error.ml
src/handle/: command.ml  dune
src/lsp/: lp_doc.ml  lp_lsp.ml  lsp_base.ml  lsp_base.mli
src/parsing/: dkLexer.mll  dkParser.mly  dune  env.ml  legacy_parser.ml  lpLexer.ml  lpParser.mly  parser.ml  pratt.ml  pretty.ml  sig_state.ml  sign.ml  syntax.ml  terms.ml  unif_rule.ml
src/proof_mode/: dune  proof.ml  queries.ml  rewrite.ml  tactics.ml  why3_tactic.ml
src/pure/: cmd_analysis.ml  cmd_analysis.mli  dune  pure.ml  pure.mli
src/scoping/: builtin.ml  ctxt_for_eval.ml  eval.ml  pratt.ml  pretty.ml  print.ml  scope.ml
src/tool/: sr.ml
src/type_checking/: ctxt_for_eval.ml  dune  eval.ml  infer.ml  print.ml  sr.ml  unif.ml  unif_rule.ml
tests/: dune  ok_ko.ml  utils.ml
tests/OK/: FO_theorems.dk  anonymous.lp  apply.lp  emptySet.dk  foo.lp  inductive_type.lp  logic.lp  natproofs.lp  perf_rw_fib-nonRightLin.lp  rewrite.lp  rewrite_pattern.lp  tautologies.lp  tptp.dk  triangular.lp  why3.lp
