(rule
 (targets version.ml)
 (action
  (with-stdout-to version.ml
    (run ocaml unix.cma %{dep:../../tools/gen_version.ml})))
 (mode fallback))

(library
 (name core)
 (public_name lambdapi.core)
 (synopsis "LambdaPi interactive theorem prover [core]")
 (preprocess (per_module ((action (run pa_ocaml %{input-file})) parser)))
 (flags (:standard -w -27))
 (libraries unix stdlib-shims timed bindlib earley.core why3 lplib file_management parsing type_checking proof_mode))
