(rule
 (targets version.ml)
 (action
  (with-stdout-to version.ml
    (run ocaml unix.cma %{dep:../../tools/gen_version.ml})))
 (mode fallback))

(library
 (name core)
 (public_name lambdapi.core)
 (synopsis "LambdaPi interactive theorem prover [core]")
 (modules :standard)
 (libraries unix stdlib-shims timed bindlib why3 lplib file_management parsing type_checking proof_mode))