(library
 (name parsing)
 (public_name lambdapi.parsing)
 (modules :standard)
 (preprocess (pps sedlex.ppx))
 (libraries pratter sedlex sedlex.ppx lplib file_management))

(menhir (flags --explain --external-tokens LpLexer) (modules lpParser))

(ocamllex dkLexer)
(menhir
 (flags (--external-tokens DkLexer))
 (modules dkParser))